force-app/main/default/objects/Work_Order_Status_Mapping__mdt/Work_Order_Status_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Work Order Status Mapping</label>
    <pluralLabel>Work Order Status Mappings</pluralLabel>
</CustomObject>