force-app/main/default/objects/Work_Order_Status_Mapping__mdt/fields/Action_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Action_Assigned_To__c</fullName>
    <label>Action Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dallas</fullName>
                <default>true</default>
                <label>Dallas</label>
            </value>
            <value>
                <fullName>Jason</fullName>
            </value>
            <value>
                <fullName>Connor</fullName>
            </value>
            <value>
                <fullName>Melissa</fullName>
            </value>
            <value>
                <fullName>Salesfoce Automation</fullName>
            </value>
            <value>
                <fullName>Matt</fullName>
            </value>
            <value>
                <fullName>Charles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>