force-app/main/default/objects/Work_Order_Status_Mapping__mdt/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <label>Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>