force-app/main/default/objects/Work_Order_Status_Mapping__mdt/fields/New_WO_Status__c.field-meta.xml
<CustomField>
    <fullName>New_WO_Status__c</fullName>
    <label>New WO Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Ready</fullName>
                <default>true</default>
                <label>Not Ready</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>