force-app/main/default/objects/Work_Order_Status_Mapping__mdt/listViews/MyView.listView-meta.xml
<ListView>
    <fullName>MyView</fullName>
    <columns>Failure_Reason__c</columns>
    <columns>Status_Category__c</columns>
    <columns>New_WO_Status__c</columns>
    <columns>Action_Required__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>MyView</label>
</ListView>